@@ -8,9 +8,8 @@ import org.modelmapper.ModelMapper;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @AllArgsConstructor
 @RestController
@@ -24,13 +23,13 @@ public class CommentController {
     public ResponseEntity<List<CommentDTO>> createComments(@RequestBody List<CommentDTO> commentDTOList) {
         List<Comment> commentEntityList = commentDTOList.stream()
                 .map(commentDTO -> modelMapper.map(commentDTO, Comment.class))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Comment> createdComments = commentService.saveOrUpdateAllComments(commentEntityList);
 
         List<CommentDTO> responseCommentDTOs = createdComments.stream()
                 .map(createdComment -> modelMapper.map(createdComment, CommentDTO.class))
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.created(
                 ServletUriComponentsBuilder
@@ -46,7 +45,7 @@ public class CommentController {
         List<Comment> comments = commentService.getCommentsByPostId(postId);
         List<CommentDTO> commentDTOs = comments.stream()
                 .map(comment -> modelMapper.map(comment, CommentDTO.class))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(commentDTOs);
     }
 }
